updated the repo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,9 +11,7 @@
 
 <body>
 <h1>Image Hoster</h1>
-<main>
-    <!-- Iterating through each image and displaying the image, its title and the date on which it is posted-->
-    <!-- Uncomment the following piece of code-->
+<main id="images">
     <post th:each="i : ${images}">
         <div>
             <img th:src="'data:image/jpeg;base64,'+${i.imageFile}"/>
